# SubjuGator

./: .gitignore  README.md  get_headings.py
command/sub8_alarm/alarm_handlers/: kill.py  odom_kill.py
command/sub8_launch/config/: buoy_finder.yaml  colored_rectangle_finder.yaml  default_color_calibration.yaml  gazebo_color_calibration.yaml  orange_rectangle_finder.yaml  rise_6dof.yaml  robosub_constants.yaml
command/sub8_launch/launch/: sub8.launch  tf.launch
command/sub8_launch/launch/subsystems/: nav_box.launch  perception.launch
command/sub8_launch/launch/subsystems/cameras/launch/: down_cameras.launch
command/sub8_missions/missions/: align_path_marker.py  autonomous.py  buoy.py  collect_classify.py  dice.py  find_bins.py  go_to_pinger.py  navigation_gate.py  network_loss_test.py  pinger.py  pose_sequence_test.py  roulette_wheel.py  start_gate.py  start_gate_guess.py  start_gate_simple.py  surface.py  surface_octagon.py  tx_test.py
command/sub8_missions/nodes/: move_command
command/sub8_missions/sub8/: sub_singleton.py  vision_proxies.yaml
drivers/sub8_actuator_driver/: valves.yaml
drivers/sub8_actuator_driver/launch/: actuator_driver.launch
drivers/sub8_hydrophones/src/sub8_hydrophones/: algorithms.py
drivers/sub8_videoray_m5_thruster/nodes/: thruster_driver.py
gnc/sub8_slam/: CMakeLists.txt  package.xml
gnc/sub8_slam/CMakeModules/: FindEigen.cmake  FindMathGL.cmake  Findsba.cmake
gnc/sub8_slam/analysis/: bayesian_filter.cc
gnc/sub8_slam/include/: backward.cpp
gnc/sub8_slam/include/sub8_slam/: slam.h
gnc/sub8_slam/src/: frame.cc  motion.cc  slam.cc  tracking.cc  visualization.cc  visualization2d.cc
gnc/sub8_thruster_mapper/config/: thruster_layout_old.yaml
gnc/sub8_thruster_mapper/nodes/: mapper.py
perception/sub8_perception/: CMakeLists.txt
perception/sub8_perception/include/sub8_perception/: navigation_gate.hpp  start_gate.hpp
perception/sub8_perception/ml_classifiers/: object_detection.py
perception/sub8_perception/ml_classifiers/dice/: dice_detection.py
perception/sub8_perception/ml_classifiers/dice/utils/: detector_utils.py
perception/sub8_perception/nodes/: CLAHE_Processing.py  buoy_finder.py  camera_equalization.py  colored_rectangle_finder.py  get_headings.py  navigation_gate_finder.py  navigation_gate_node.cpp  orange_rectangle_finder.py  start_gate_finder.py
perception/sub8_perception/src/sub8_perception/: BuoyDetector.py  feature_extraction.py  navigation_gate.cpp  sliding_windows.py  start_gate.cpp  svm.py
perception/sub8_perception/src/sub8_vision_lib/: stereo_base.cpp
perception/sub8_perception/test/: path_marker.test  test_path_marker.py
scripts/: bagging_variables.sh
